Resolve multi-modalDialog boxes failing to return bodyOverflow state.

--- a/sass/scss/instance.modaldialog.scss
+++ b/sass/scss/instance.modaldialog.scss
@@ -18,7 +18,7 @@
 		background:#fff;
 		width:60%;
 		max-width:30em;
-        max-height:100%;
+        max-height:95%;
         overflow:auto;
 		border: .3em solid #eee;
 		margin:0 auto;
@@ -29,16 +29,9 @@
                 padding:.7em;
             }
         }
-        >.action {
-            margin:1.6em;
-        }
-        >.body >.message, >.action {
-            text-align:center;
-        }
-		>.body {
-            padding:1em 1em 0 1em;
-            >.message {
-                margin-bottom:1em;
+        >.body {
+            >.message, >.custom {
+                margin:1.4em 1.4em 0 1.4em;
             }
             >.custom {
                 input, select, button {
@@ -48,11 +41,14 @@
         }
 
 		>.action {
+            text-align:center;
+            margin:0 1.4em 1.4em 1.4em;
 			input, select, button {
 				padding:.7em 1em;
+                margin-top:1.4em;
 			}
 
-			input + input, select + select, input + select, select + input, select + button, input + button, button + select, button + input { 
+			input + input, select + select, input + select, select + input, select + button, input + button, button + select, button + input {
 				margin-left: 1em;
 			}
 		}
@@ -67,13 +63,8 @@
 				display:block;
 				width:100%;
 			}
-	        width:90%;
-            >.body {
-                >.message, >.custom {
-                    margin:.7em;
-                }
-            }
-            >.action {
+	        width:90%;   
+            >.message, >.action, >.custom {
                 margin:.7em;
             }
             >.header >h1 {
